@@ -1,3 +1,8 @@
+Unreleased Changes (C++/Java/Python/PHP/Objective-C/C#/Ruby/JavaScript)
+
+  Compiler
+  * Require package names to be less than 512 bytes in length
+
 2022-04-05 version 3.20.1 (C++/Java/Python/PHP/Objective-C/C#/Ruby/JavaScript)
 
   PHP
